'Added the functionality of payment and myBookings'

--- a/app/src/main/res/layout/activity_book_seats.xml
+++ b/app/src/main/res/layout/activity_book_seats.xml
@@ -815,6 +815,7 @@
                 android:layout_weight="0.3">
 
                 <Button
+                    android:id="@+id/btnDone"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginEnd="10dp"
