--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -101,7 +101,9 @@
                         android:layout_gravity="right"
                         android:layout_marginTop="-25dp"
                         android:backgroundTint="@color/light_black"
-                        android:src="@drawable/swap"/>
+                        android:src="@drawable/swap"
+                        android:scrollX="3dp"
+                        android:scrollY="2dp"/>
 
                     <LinearLayout
                         android:layout_width="match_parent"
