--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -7,13 +7,18 @@
         android:title="@string/title_home" />
 
     <item
-        android:id="@+id/navigation_dashboard"
-        android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_dashboard" />
+        android:id="@+id/navigation_booking"
+        android:icon="@drawable/to_do_list"
+        android:title="My Bookings" />
 
     <item
-        android:id="@+id/navigation_notifications"
-        android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_notifications" />
+        android:id="@+id/navigation_help"
+        android:icon="@drawable/help"
+        android:title="Help" />
+
+    <item
+        android:id="@+id/navigation_account"
+        android:icon="@drawable/user"
+        android:title="My Account" />
 
 </menu>
